<resources>

    <!-- Name App -->
    <string name="app_name">Spendify</string>

    <!-- Primera pantalla -->

    <!-- Títulos y descripciones -->
    <string name="encabezado_primera_pantalla">Tu compañero financiero personal</string>
    <string name="texto_descriptivo_primera_pantalla">Toma el control de tus finanzas de manera sencilla y efectiva.</string>

    <!-- Descripción de imágenes -->
    <string name="app_identity">Logo de la aplicación Spendify y eslogan</string>

    <!-- ==================================================================================================================================================== -->

    <!-- Pantalla Crea una cuenta -->
    <string name="titulo_crear_una_cuenta">Crea una cuenta</string>
    <string name="texto_crear_cuenta">Descubre cómo tomar el control de tu dinero con\nnuestras guías detalladas y herramientas\npersonalizadas.</string>
    <string name="texto_correo_electronico">Correo electrónico</string>
    <string name="hint_correo_electronico">jane_doe@example.com</string>

    <!-- Descripciones de imágenes -->
    <string name="logo_app">Logo de la aplicación</string>
    <string name="imagen_nombre_app">Nombre de la aplicación</string>
    <string name="imagen_linea_separadora">imagen_linea_separadora</string>

    <!-- Botones -->
    <string name="continuar_google">Continuar con google</string>
    <string name="continuar_facebook">Continuar con Facebook</string>
    <string name="boton_registrar">Registrar</string>

    <!-- Textos del final -->
    <string name="texto_ya_tienes_una_cuenta">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="aceptas_terminos">Al continuar, aceptas nuestros</string>
    <string name="tex_terminos">Términos de servicio y</string>
    <string name="text_politicasPrivacidad">Politicas de privacidad</string>
    <string name="boton_comenzar">Comenzar</string>

    <!-- ==================================================================================================================================================== -->

    <!-- Pantalla Iniciar Sesion -->

    <!-- Títulos y descripciones -->
    <string name="titulo_inicia_sesion">Inicia sesión</string>
    <string name="EditText_contrasena">***********</string>
    <string name="texto_contrasena">Contraseña</string>


    <!-- ==================================================================================================================================================== -->

    <!-- Pantalla Ingresar Sueldo -->

    <!-- Titulo -->
    <string name="titulo_al_mes">al mes?</string>
    <string name="titulo_cuanto_ganas">¿Cuánto ganas</string>
    <string name="texto_sueldo">Sueldo en USD (podrás modificarlo más adelante)</string>

    <!-- Textos botones -->
    <string name="boton_opcion1">Menos de $1.000 USD</string>
    <string name="boton_opcion2">$1,000 USD - $1,599 USD</string>
    <string name="boton_opcion3">$1,600 USD - $1,999 USD</string>
    <string name="boton_opcion4">Más de $2,000 USD</string>
    <string name="boton_siguiente">Siguiente</string>


    <!-- ==================================================================================================================================================== -->

    <!-- Pantalla Ingresar Gastos Mensuales Fijos -->

    <!-- Titulo -->
    <string name="titulo_tienes_gastos">¿Tienes gastos</string>
    <string name="titulo_fijos_mensuales">fijos mensuales?</string>

    <!-- TextViews y EditTexts -->
    <string name="texto_tipo_de_gasto">Tipo de gasto</string>
    <string name="EditText_alquiler_seguro_gasolina">Alquiler, Seguro, Gasolina, …</string>
    <string name="texto_monto">Monto</string>
    <string name="EditText_monto">$00.000,00</string>

    <!-- Botones -->
    <string name="button_agregar">Agregar</string>
    <string name="button_continuar">Continuar</string>

    <!-- TableLayout -->
    <string name="tipo_de_gasto">Tipo de Gasto</string>
    <string name="monto">Monto</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>

    <!-- dialog_editar_gasto.xml -->
    <string name="titulo_modificar_gasto">Modificar gasto</string>
    <string name="EditText_Hint_tipo_de_gasto">Tipo de Gasto</string>
    <string name="EditText_Hint_monto">Monto</string>
    <string name="texto_confirmar_cambio">Confirmar cambio</string>


    <!-- ==================================================================================================================================================== -->

    <!-- Pantalla Index -->

    <!-- Titulo -->
    <string name="titulo_bienvenido">¡Bienvenido/a!</string>

    <!-- Botones -->
    <string name="boton_gastos">Gastos</string>
    <string name="boton_ver_resumen_mensual">Ver resumen mensual</string>
    <string name="boton_consejos">Consejos sobre Gastos y Ahorros</string>
    <string name="boton_configuracion">Configuracion</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <!-- Dialog Cerrar sesion -->
    <string name="confirmar_cerrar_sesion">¿Deseas cerrar sesión en Spendify?</string>
    <string name="texto_cerrar_sesion">Puedes volver a iniciar sesión en cualquier momento.</string>
    <string name="boton_cancelar">Cancelar</string>


    <!-- ==================================================================================================================================================== -->

    <!-- Pantalla Ver Gastos -->

    <!-- Titulo -->
    <string name="titulo_gastos">Gastos</string>

    <!-- Descripción de imágenes -->
    <string name="imagen_pantalla_ver_gastos">Imagen de Pantalla Ver Gastos</string>

    <!-- Botones -->
    <string name="opcion_agregar">Agregar</string>
    <string name="boton_volver">Volver</string>

    <!-- dialog_agregar_gasto.xml -->
    <string name="titulo_agregar_gasto">Agregar gasto</string>

    <!-- ==================================================================================================================================================== -->

    <!-- Pantalla Ver Resumen Mensual -->

    <!-- Titulo y textos -->
    <string name="titulo_resumen_mensual">Resumen mensual</string>
    <string name="TextView_total_de_gastos_mensuales">Total de gastos mensuales</string>
    <string name="texto_distribucion_de_gastos">Distribución de gastos</string>
    <string name="formato_total_de_gastos_mensuales">Total de gastos mensuales: %.2f</string>

    <!-- Descripción de imágenes -->
    <string name="imagen_de_pantalla_ver_resumen_mensual">Imagen de pantalla Ver Resumen Mensual</string>
    <string name="grafico">Gráfico de Regla 50/30/20</string>


    <!-- ==================================================================================================================================================== -->

    <!-- Pantalla Ver Consejos -->

    <!-- Titulo y textos -->
    <string name="titulo_consejos_sobre">Consejos sobre</string>
    <string name="titulo_gastos_y_ahorros">Gastos y Ahorros</string>

    <!-- Descripción de imágenes -->
    <string name="imagen_pantalla_ver_consejos">Imagen de pantalla Ver Consejos</string>

    <!-- SrollView -->
    <string name="boton_continuar">Continuar</string>
    <string name="agregar_consejo">Agregar consejo</string>
    <string name="text_presione_boton">Haz click en agregar consejo para visualizarlos</string>

    <!-- Textos que se agregan en el ScrollView de la pantalla -->
    <string-array name="textos">
        <item>Establecer un monto en pesos o dólares y la fecha límite para tener ese dinero ahorrado.</item>
        <item>Separar el dinero a ahorrar en una cuenta de banco distinta a la que se utiliza. Muchas entidades ofrecen cuentas de ahorro con beneficios para hacer crecer el dinero depositado y que no quede estancado. Por otro lado, esta opción fomentará que el monto ahorrado no se toque para gastos hormigas porque no estará en la cuenta de uso habitual.</item>
        <item>La tercera opción será distribuir los ingresos mensuales en un excel o planilla de papel y colocar en un apartado los montos que se ahorran mensualmente para llegar a la meta. De esta manera, se tendrá una dimensión del dinero necesario para gastos diarios y extras y el dinero que se debe destinar si o si para ahorrar.</item>
        <item>Ser flexibles, reprimir un gasto extra un fin de semana no cambiará tu meta solo si este se compensa, es decir, si un fin de semana se gastó el presupuesto de dos, se recomienda ser austeros durante la semana para recuperar esa pérdida y no gastar de más.</item>
        <item>Comprar en cantidad y frizar aquellos productos que puedan congelarse para ganarle a la inflación y la variación de precios.</item>
        <item>Planificar las comidas y salidas también ayudará a generar más ahorros o evitar gastar dinero no estipulado. Muchas veces se improvisan comidas express para salir del paso y esos micro gastos tanto de delivery, como de compras en el comercio de cercanía son gastos hormigas que a fin de mes suman mucho más de lo pensado. Planificar las comidas de la semana los domingos o lunes es un buen ejercicio para realizar esta práctica.</item>
    </string-array>


    <!-- ==================================================================================================================================================== -->

    <!-- Pantalla Ver Configuración -->

    <!-- Titulo y textos -->
    <string name="titulo_configuracion">Configuracion</string>

    <!-- Descripción de imágenes -->
    <string name="imagen_pantalla_configuracion">Imagen pantalla configuracion</string>

    <!-- Acciones -->
    <string name="modificar_contrasena">Modificar contraseña</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="contrasena_nueva">Nueva contraseña</string>
    <string name="modificar_ingreso_mensual">Modificar ingreso mensual</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="boton_aceptar">Aceptar</string>

    <string name="sueldo">Sueldo</string>

    <string name="confirmar_contrasena">Ingrese su contraseña para confirmar</string>


</resources>