<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaIndex">

    <!-- LinearLayout que cubre toda la pantalla -->
    <LinearLayout
        android:id="@+id/LinearLayout_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_background"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

    <!-- LinearLayout para el header -->
    <LinearLayout
        android:id="@+id/linearLayout_Header"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/lima"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imagen_logo"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:contentDescription="@string/logo_app"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/imagen_name_app"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:contentDescription="@string/imagen_nombre_app"
            android:src="@drawable/name_app" />

    </LinearLayout>

    <!-- LinearLayout para titulo y botones-->
    <LinearLayout
        android:id="@+id/linearLayout_Titulo_Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_Header"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Titulo -->
        <TextView
            android:id="@+id/titulo_bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medida75"
            android:fontFamily="@font/tt_interphases_extra_bold"
            android:text="@string/titulo_bienvenido"
            android:textColor="@color/lima"
            android:textSize="@dimen/fuenteTituloGrande" />

        <!-- Botón "Gastos" -->
        <Button
            android:id="@+id/boton_gastos"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medida50"
            android:backgroundTint="@color/lima"
            android:text="@string/boton_gastos"
            android:textColor="@color/verde_oscuro"/>

        <!-- Botón "Ver resumen mensual" -->
        <Button
            android:id="@+id/boton_ver_resumen_mensual"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medida35"
            android:backgroundTint="@color/lima"
            android:text="@string/boton_ver_resumen_mensual"
            android:textColor="@color/verde_oscuro"/>

        <!-- Botón "Consejos sobre Gastos y Ahorros" -->
        <Button
            android:id="@+id/boton_consejos"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medida35"
            android:backgroundTint="@color/lima"
            android:text="@string/boton_consejos"
            android:textColor="@color/verde_oscuro"/>

        <!-- Botón "Configuración" -->
        <Button
            android:id="@+id/boton_configuracion"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medida35"
            android:backgroundTint="@color/lima"
            android:text="@string/boton_configuracion"
            android:textColor="@color/verde_oscuro"/>

        <!-- Botón "Cerrar sesión" -->
        <Button
            android:id="@+id/boton_cerrar_sesion"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medida35"
            android:backgroundTint="@color/lima"
            android:text="@string/boton_cerrar_sesion"
            android:textColor="@color/verde_oscuro"/>

    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>