<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/green_background"
    android:gravity="center"
    android:padding="@dimen/medida20">

    <!-- Título -->
    <TextView
        android:id="@+id/textView_titulo_dialogCerrarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion"
        android:textSize="@dimen/fuenteTitulo"
        android:gravity="center"
        android:fontFamily="@font/tt_interphases_extra_bold"
        android:textColor="@color/lima"/>

    <!-- Encabezado 'Confirmar cerrar sesión' -->
    <TextView
        android:id="@+id/textView_confirmarCerrarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medida35"
        android:gravity="center"
        android:fontFamily="@font/tt_interphases_demi_bold"
        android:textColor="@color/lima"
        android:textSize="@dimen/fuenteEncabezado"
        android:text="@string/confirmar_cerrar_sesion"/>

    <!-- Texto 'Cerrar sesión' -->
    <TextView
        android:id="@+id/textView_textoCerrarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medida7"
        android:gravity="center"
        android:fontFamily="@font/tt_interphases_demi_bold"
        android:textColor="@color/lima"
        android:textSize="@dimen/fuente12"
        android:text="@string/texto_cerrar_sesion"/>

    <!-- Botón 'Cerrar sesión' -->
    <Button
        android:id="@+id/boton_confirmarCerrarSesion"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medida35"
        android:backgroundTint="@color/lima"
        android:text="@string/cerrar_sesion"
        android:textColor="@color/verde_oscuro" />

    <!-- Botón 'Cancelar' -->
    <Button
        android:id="@+id/boton_cancelarCerrarSesion"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medida10"
        android:backgroundTint="@color/lima_oscuro"
        android:text="@string/boton_cancelar"
        android:textColor="@color/white" />

</LinearLayout>